--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -2,5 +2,8 @@
 
 include(CMakeFindDependencyMacro)
 
+find_dependency(Poco REQUIRED Util)
+find_dependency(logutil REQUIRED)
+
 include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake)
 check_required_components(@PROJECT_NAME@)
