--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -2,7 +2,7 @@
 
 include(CMakeFindDependencyMacro)
 
-find_dependency(Poco REQUIRED Util)
+find_dependency(Poco REQUIRED Foundation)
 find_dependency(logutil REQUIRED)
 
 include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake)
