--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,11 +31,11 @@
 		}
 	},
 	"containerEnv": {
-		"LD_LIBRARY_PATH": "${containerWorkspaceFolder}/lib_module_dependencies",
 		"VCPKG_BINARY_SOURCES":"clear;files,${containerWorkspaceFolder}/../thirdparty/vcpkg_cache,readwrite"
 	},
 	"mounts": [
 		"source=${localWorkspaceFolder}/../thirdparty,target=${containerWorkspaceFolder}/../thirdparty,type=bind,consistency=cached",
+		"source=/etc/localtime,target=/etc/localtime,type=bind,readonly"
 	],
 	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
 	"remoteUser": "vscode"
