--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -2,6 +2,8 @@
 
 include(CMakeFindDependencyMacro)
 
+find_dependency(spdlog REQUIRED)
+find_dependency(fmt REQUIRED)
 find_dependency(logutil REQUIRED)
 
 include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake)
