--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -4,7 +4,9 @@ include(CMakeFindDependencyMacro)
 
 find_dependency(spdlog REQUIRED)
 find_dependency(fmt REQUIRED)
-find_dependency(logutil REQUIRED)
 
-include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake)
+if(NOT TARGET @PROJECT_NAME@)
+    include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake)
+endif()
+
 check_required_components(@PROJECT_NAME@)
