--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,9 @@
         "xmemory": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "codecvt": "cpp",
+        "complex": "cpp",
+        "source_location": "cpp"
     },
 }
